[package]
name = "mk_bary_gltf"
version = "0.1.0"
authors = ["Robin KAY <komadori@gekkou.co.uk>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/komadori/mk_bary_gltf"
repository = "https://github.com/komadori/mk_bary_gltf"

[dependencies]
anyhow = "1.0"
gltf = "1.0"
gltf-json = { version = "1.0", features = ["names", "extras"] }
serde_json = { version = "1.0", features = ["raw_value"] }
